@@ -1,6 +1,8 @@
 Changes in 3.1.4 :
 - Make sure user is properly logged in when handling a torrent post in the webgui
 - Prevent PHP injection attacks in webgui
+- Added safety check to fix potential crash
+- Fix bug causing infinite DNS lookups in UDP tracker when lookup fails
 
 Changes in 3.1.3 :
 - Make login into webinterface secure
